blocks/modal.css
.modal {
    display: none;
  }

.modal_opened {
    position: fixed;
    display: flex;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.5);
    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
}

.modal__container {
    padding: 36px;
    position: relative  ;
    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
    background: rgba(255, 255, 255, 1);
    height: 330px;
    width: 430px;
    background-color: white;
    border-radius: 10px;
}

.modal__button-close {
    position: absolute;
    border: none;
    background-color: transparent;
    top: -45px;
    right: -45px;
    width: 40px;
    height: 40px;
    background-image:  url(../images/Close-Icon.svg);
    background-repeat: no-repeat;  
    background-size: contain;
    cursor: pointer;
    margin: 0;
    padding: 0;
}


.modal__heading {
    margin: 0;
    padding: 0 0 55px 0;
    font-family: "Inter", Arial, sans-serif;
    font-weight: 900;
    font-size: 24px;
    line-height: 29px;
}

.modal__form {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.modal__input {
    margin: 0;
    padding: 0;
    border: none;   
    font-family: "Inter", Arial, sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 1);
    padding-bottom: 12.5px;
    color: black;
}

.modal__input:first-child {
    margin-bottom: 30px;
}

.modal__input:nth-child(2) {
    margin-bottom: 50px;
}

.modal__button-save {
    font-family: "Inter", Arial, sans-serif;
    font-weight: 400;
    font-size: 18px;
    line-height: 22px;
    padding: 15px 125px 15px 125px;
    margin: 0;
    border: none;
    width: 100%;
    line-height: 18px;
    background-color: black;
    color: white;
    justify-content: center;
}

.image__preview_modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 100;
  }
  
  .modal__image-container {
      position: relative;
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
      max-width: 75vw;
      max-height: 75vh;
  }
  
  .modal__image {
      justify-content: center;
      align-items: center;
      width: 100%;
  }
  
  .modal__caption {
      margin: 10px 0 0 0;
      top: 20px;
      left: 20px;
      color: #fff;
      font-size: 20px;
      width: 290px;
  }

@media screen and (max-width: 320px){
    .modal_opened {
        width: 100%;
    }

    .modal__container {
        padding: 25px;
        height: 272px;
        width: calc(100% - 88px);
    }

    .modal__heading {
        font-family: "Inter", Arial, sans-serif;
        font-weight: 900;
        font-size: 18px;
        line-height: 22px;
        padding-bottom: 75px;
    }

    .modal__input {
        font-family: "Inter", Arial, sans-serif;
        font-weight: 400;
        font-size: 14px;
        line-height: 17px;
    }

    .modal__input:first-child {
        margin-bottom: 30px;
    }

    .modal__input:nth-child(2) {
        margin-bottom: 45px;
    }

    .modal__button-save {
        font-family: "Inter", Arial, sans-serif;
        font-weight: 400;
        font-size: 14px;
        line-height: 17px;
        display: block;
        height: 46px;
        margin: 0;
        padding:15px 100px 15px 100px;
    }

    .modal__button-close {
        top: -55px;
        right: 0px;
        width: 26px;
        height: 26px;
    }
}

